# gazebo-asv

./: CoriolisForces_6DoF.nb  DroneKinetics_6DoF.m  GazeboSensorsForModel.sdf  GeometryNotes.txt  README.asciidoc  TODO
asv-swarm/: CMakeLists.txt  control.cc
gazebo-asv-prj/: gazebo-asv-prj.pro
models/: create_swarm_asv_models.sh
models/asv_model/: model.sdf
models/asv_model/meshes/: proto7_meters.dae  proto7_meters_x10.dae
models/surfacevehicle/: model.config  model.sdf  model_cylinder.sdf  model_scale_x10.sdf
models/surfacevehicle/meshes/: proto7_centimeters.dae  proto7_cleaned.dae  proto7_cleaned_2.dae
models/surfacevehicle/meshes/Edited/: proto7.3dm
models/surfacevehicle/meshes/MeshLabPlay/: bb_center.mlp
plugins/asvdynamics/: ASVDynamicsPlugin.cc  ASVDynamicsPlugin.hh
plugins/models/asvdynamics/: ASVDynamicsPlugin.cc  ASVDynamicsPlugin.hh  CMakeLists.txt
plugins/sensors/gps/: CMakeLists.txt  GpsPlugin.cc  GpsPlugin.hh
worlds/: create_swarm_world.py  surface.world  surface.world.template
